# CTF-MCP

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BEST_PRACTICES.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: quality.yml
ctf_mcp/: server.py
ctf_mcp/adapters/: __init__.py
ctf_mcp/ai/: assistant.py
ctf_mcp/core/: executor.py
ctf_mcp/tools/: crypto.py  forensics.py  misc.py  pwn.py  reverse.py  web.py
ctf_mcp/utils/: __init__.py  formatter.py  helpers.py  payload_base.py  security.py  validation.py
ctf_mcp/workflow/: workflow.py
tests/: conftest.py  test_crypto.py  test_forensics.py  test_misc.py  test_pwn.py  test_reverse.py  test_server.py  test_web.py
tests/integration/: test_new_modules.py
